--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>youtube-caption</name>
+	<name>transcript_tether</name>
 	<comment>Project youtube-caption created by Buildship.</comment>
 	<projects>
 	</projects>
