--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,25 @@ apply plugin: 'application'
 mainClassName = 'ca.carleton.gcrc.tetherScript.Command'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
-version = '1.0.2'
+version = '1.0.3'
 
 task exec (type: Jar) {
+
+
+	sourceSets {
+		main{
+			java {
+				srcDir 'src/main'
+				exclude 'test/**'
+			}
+		}
+	}
 	manifest {
 			attributes 'Main-Class': 'ca.carleton.gcrc.tetherScript.Command',
 			'Implementation-Version': version,
 			'Implementation-Title': 'TranscriptTether Util'
+			
+
 		}
 	
 	baseName = 'transcript_tether'
@@ -30,6 +42,9 @@ dependencies {
     compile 'com.google.apis:google-api-services-youtube:v3-rev182-1.22.0'
     // https://mvnrepository.com/artifact/commons-cli/commons-cli
 	compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+	// https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
+	compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.23.1'
+	
 
     
 }
